--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,26 +3,19 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,},
-  preview={brownian-motion.gif}
+@inproceedings{arya2022poster,
+  title={Poster: Leveraging Question Answering to Understand Context Specific Patterns in Fact Checked Articles in the Global South},
+  author={Arya, Arshia and Dash, Saloni and Akbar, Syeda Zainab and Pal, Joyojeet and Sen, Anirban},
+  booktitle={ACM SIGCAS/SIGCHI Conference on Computing and Sustainable Societies (COMPASS)},
+  pages={628--631},
+  year={2022}
 }
-
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
+@inproceedings{dash2022narrative,
+  title={Narrative Building in Propaganda Networks on Indian Twitter},
+  author={Dash, Saloni and Arya, Arshia and Kaur, Sukhnidh and Pal, Joyojeet},
+  booktitle={14th ACM Web Science Conference 2022},
+  pages={239--244},
+  year={2022}
 }
 
 @article{PhysRev.47.777,
