--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,59 +17,40 @@
   pages={239--244},
   year={2022}
 }
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  selected={true}
+@inproceedings{arya2022dismiss,
+  title={DISMISS: Database of Indian Social Media Influencers on Twitter},
+  author={Arya, Arshia and De, Soham and Mishra, Dibyendu and Shekhawat, Gazal and Sharma, Ankur and Panda, Anmol and Lalani, Faisal and Singh, Parantak and Mothilal, Ramaravind Kommiya and Grover, Rynaa and others},
+  booktitle={Proceedings of the International AAAI Conference on Web and Social Media},
+  volume={16},
+  pages={1201--1207},
+  year={2022}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{de2022closed,
+  title={Closed Ranks: The Discursive Value of Military Support for Indian Politicians on Social Media},
+  author={De, Soham and Seth, Agrima and Arya, Arshia and Wilkinson, Steven and Singh, Sushant and Singh, Joyojeet},
+  journal={arXiv preprint arXiv:2204.03098},
+  year={2022}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{arya2022database,
+  title={Database of Indian Social Media Influencers on Twitter},
+  author={Arya, Arshia and De, Soham and Mishra, Dibyendu and Shekhawat, Gazal and Sharma, Ankur and Panda, Anmol and Lalani, Faisal and Singh, Parantak and Mothilal, Ramaravind Kommiya and Grover, Rynaa and others},
+  journal={arXiv preprint arXiv:2203.09193},
+  year={2022}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@inproceedings{arya2021beyond,
+  title={Beyond Business: A Poster Contrasting CEO Activism on Social Media in India and the United States},
+  author={Arya, Arshia and Shora, Shehla Rashid and Pal, Joyojeet},
+  booktitle={ACM SIGCAS Conference on Computing and Sustainable Societies},
+  pages={432--436},
+  year={2021}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+@article{mishra2021rihanna,
+  title={Rihanna versus Bollywood: Twitter Influencers and the Indian Farmers' Protest},
+  author={Mishra, Dibyendu and Akbar, Syeda Zainab and Arya, Arshia and Dash, Saloni and Grover, Rynaa and Pal, Joyojeet},
+  journal={arXiv preprint arXiv:2102.04031},
+  year={2021}
 }
