Update selected pubs

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,8 @@
   author={Arya, Arshia and Dash, Saloni and Akbar, Syeda Zainab and Pal, Joyojeet and Sen, Anirban},
   booktitle={ACM SIGCAS/SIGCHI Conference on Computing and Sustainable Societies (COMPASS)},
   pages={628--631},
-  year={2022}
+  year={2022},
+  selected={true}
 }
 @inproceedings{dash2022narrative,
   title={Narrative Building in Propaganda Networks on Indian Twitter},
@@ -23,7 +24,8 @@
   booktitle={Proceedings of the International AAAI Conference on Web and Social Media},
   volume={16},
   pages={1201--1207},
-  year={2022}
+  year={2022},
+  selected={true}
 }
 
 @article{de2022closed,
@@ -45,12 +47,14 @@
   author={Arya, Arshia and Shora, Shehla Rashid and Pal, Joyojeet},
   booktitle={ACM SIGCAS Conference on Computing and Sustainable Societies},
   pages={432--436},
-  year={2021}
+  year={2021},
+  selected={true}
 }
 
 @article{mishra2021rihanna,
   title={Rihanna versus Bollywood: Twitter Influencers and the Indian Farmers' Protest},
   author={Mishra, Dibyendu and Akbar, Syeda Zainab and Arya, Arshia and Dash, Saloni and Grover, Rynaa and Pal, Joyojeet},
   journal={arXiv preprint arXiv:2102.04031},
-  year={2021}
+  year={2021},
+  selected={true}
 }
