Update tag on pubs

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,14 +9,16 @@
   booktitle={ACM SIGCAS/SIGCHI Conference on Computing and Sustainable Societies (COMPASS)},
   pages={628--631},
   year={2022},
-  selected={true}
+  selected={true},
+  abbr="COMPASS"
 }
 @inproceedings{dash2022narrative,
   title={Narrative Building in Propaganda Networks on Indian Twitter},
   author={Dash, Saloni and Arya, Arshia and Kaur, Sukhnidh and Pal, Joyojeet},
   booktitle={14th ACM Web Science Conference 2022},
   pages={239--244},
-  year={2022}
+  year={2022},
+  abbr="ACM Web Science"
 }
 @inproceedings{arya2022dismiss,
   title={DISMISS: Database of Indian Social Media Influencers on Twitter},
@@ -25,21 +27,24 @@
   volume={16},
   pages={1201--1207},
   year={2022},
-  selected={true}
+  selected={true},
+  abbr="ICWSM"
 }
 
 @article{de2022closed,
   title={Closed Ranks: The Discursive Value of Military Support for Indian Politicians on Social Media},
   author={De, Soham and Seth, Agrima and Arya, Arshia and Wilkinson, Steven and Singh, Sushant and Singh, Joyojeet},
   journal={arXiv preprint arXiv:2204.03098},
-  year={2022}
+  year={2022},
+  abbr="arxiv"
 }
 
 @article{arya2022database,
   title={Database of Indian Social Media Influencers on Twitter},
   author={Arya, Arshia and De, Soham and Mishra, Dibyendu and Shekhawat, Gazal and Sharma, Ankur and Panda, Anmol and Lalani, Faisal and Singh, Parantak and Mothilal, Ramaravind Kommiya and Grover, Rynaa and others},
   journal={arXiv preprint arXiv:2203.09193},
-  year={2022}
+  year={2022},
+  abbr="arxiv"
 }
 
 @inproceedings{arya2021beyond,
@@ -48,7 +53,8 @@
   booktitle={ACM SIGCAS Conference on Computing and Sustainable Societies},
   pages={432--436},
   year={2021},
-  selected={true}
+  selected={true},
+  abbr="COMPASS"
 }
 
 @article{mishra2021rihanna,
@@ -56,5 +62,7 @@
   author={Mishra, Dibyendu and Akbar, Syeda Zainab and Arya, Arshia and Dash, Saloni and Grover, Rynaa and Pal, Joyojeet},
   journal={arXiv preprint arXiv:2102.04031},
   year={2021},
-  selected={true}
+  selected={true},
+  abbr="arxiv",
+  url={www.google.com}
 }
