--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,7 +10,8 @@
   pages={628--631},
   year={2022},
   selected={true},
-  abbr="COMPASS"
+  abbr="COMPASS",
+  pdf={https://dl.acm.org/doi/abs/10.1145/3530190.3534838}
 }
 @inproceedings{dash2022narrative,
   title={Narrative Building in Propaganda Networks on Indian Twitter},
@@ -18,7 +19,8 @@
   booktitle={14th ACM Web Science Conference 2022},
   pages={239--244},
   year={2022},
-  abbr="ACM Web Science"
+  abbr="ACM Web Science",
+  pdf={https://joyojeet.people.si.umich.edu/wp-content/uploads/2022/06/WebSci-Saloni-Dash.pdf}
 }
 @inproceedings{arya2022dismiss,
   title={DISMISS: Database of Indian Social Media Influencers on Twitter},
@@ -28,7 +30,9 @@
   pages={1201--1207},
   year={2022},
   selected={true},
-  abbr="ICWSM"
+  abbr="ICWSM",
+  pdf={https://ojs.aaai.org/index.php/ICWSM/article/view/19370},
+  dataset={https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/BPY2JY}
 }
 
 @article{de2022closed,
@@ -36,15 +40,8 @@
   author={De, Soham and Seth, Agrima and Arya, Arshia and Wilkinson, Steven and Singh, Sushant and Singh, Joyojeet},
   journal={arXiv preprint arXiv:2204.03098},
   year={2022},
-  abbr="arxiv"
-}
-
-@article{arya2022database,
-  title={Database of Indian Social Media Influencers on Twitter},
-  author={Arya, Arshia and De, Soham and Mishra, Dibyendu and Shekhawat, Gazal and Sharma, Ankur and Panda, Anmol and Lalani, Faisal and Singh, Parantak and Mothilal, Ramaravind Kommiya and Grover, Rynaa and others},
-  journal={arXiv preprint arXiv:2203.09193},
-  year={2022},
-  abbr="arxiv"
+  abbr="arxiv",
+  pdf={https://arxiv.org/abs/2204.03098}
 }
 
 @inproceedings{arya2021beyond,
@@ -54,7 +51,8 @@
   pages={432--436},
   year={2021},
   selected={true},
-  abbr="COMPASS"
+  abbr="COMPASS",
+  poster={https://dl.acm.org/doi/abs/10.1145/3530190.3534838}
 }
 
 @article{mishra2021rihanna,
