--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,24 @@
 
 @string{aps = {American Physical Society,}}
 
+@article{catch,
+  title={Catch, Corroborate and Communicate: The Contours of Professional fact checking in India},
+  journal={submitted},
+  year={2022},
+  selected={true},
+  abbr="Submitted",
+  pdf={https://arshiaarya.github.io/assets/pdf/Catch.pdf}
+}
+
+@article{vivaran,
+  title={Vivaran: A News Aggregation Framework for Organization Level News Consumption},
+  journal={submitted},
+  year={2022},
+  selected={true},
+  abbr="Submitted",
+  pdf={https://arshiaarya.github.io/assets/pdf/Vivaran.pdf}
+}
+
 @inproceedings{arya2022poster,
   title={Poster: Leveraging Question Answering to Understand Context Specific Patterns in Fact Checked Articles in the Global South},
   author={Arya, Arshia and Dash, Saloni and Akbar, Syeda Zainab and Pal, Joyojeet and Sen, Anirban},
@@ -18,6 +36,7 @@
   author={Dash, Saloni and Arya, Arshia and Kaur, Sukhnidh and Pal, Joyojeet},
   booktitle={14th ACM Web Science Conference 2022},
   pages={239--244},
+  selected={true},
   year={2022},
   abbr="ACM Web Science",
   pdf={https://joyojeet.people.si.umich.edu/wp-content/uploads/2022/06/WebSci-Saloni-Dash.pdf}
@@ -40,6 +59,7 @@
   author={De, Soham and Seth, Agrima and Arya, Arshia and Wilkinson, Steven and Singh, Sushant and Singh, Joyojeet},
   journal={arXiv preprint arXiv:2204.03098},
   year={2022},
+  selected={true},
   abbr="arxiv",
   pdf={https://arxiv.org/abs/2204.03098}
 }
